// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text align prop sets text-align 1`] = `
.c0 {
  text-align: center;
}

<p
  className="c0"
/>
`;

exports[`Text bold prop sets font-weight 1`] = `
.c0 {
  font-weight: 700;
}

<p
  className="c0"
/>
`;

exports[`Text caps prop sets text-transform 1`] = `
.c0 {
  text-transform: uppercase;
}

<p
  className="c0"
/>
`;

exports[`Text mt prop sets margin-top 1`] = `
.c0 {
  margin-top: 8px;
}

<p
  className="c0"
/>
`;

exports[`Text regular prop sets font-weight 1`] = `
.c0 {
  font-weight: 400;
}

<p
  className="c0"
/>
`;

exports[`Text renders 1`] = `
<p
  className=""
/>
`;
